demok8_ingress/manifests/deployment_with_ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-ingress-deploy-01
spec:
  selector:
    matchLabels:
      app: demo-ingress-01
  template:
    metadata:
      labels:
        app: demo-ingress-01
    spec:
      containers:
      - name: demo-ingress-01
        image: demok8acr.azurecr.io/demok8_ingress:31
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-cip-service-01
  labels:
    app: demo-ingress-01
spec:
  selector:
    app: demo-ingress-01
  ports:
    - port: 80
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
  labels:
    name: demoingress
spec:
  rules:
  - http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: demo-cip-service-01
            port: 
              number: 80
